--- a/src/App.css
+++ b/src/App.css
@@ -185,9 +185,10 @@ button{
 
 
   .container {
-    width: 400px;
-    margin: 0 auto;
+    width: 600px;
+    margin: 65px auto;
     padding: 20px;
+    padding-left: 10px;
     background-color: #f8f9fa;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -200,6 +201,7 @@ button{
   
   .form-group {
     margin-bottom: 15px;
+    padding: 1px;
   }
   
   label {
@@ -225,6 +227,7 @@ button{
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
+    margin-left: 1px;
   }
   
   button.btn.btn-primary:hover {
