--- a/src/App.css
+++ b/src/App.css
@@ -185,8 +185,8 @@ button{
 
 
   .container {
-    width: 600px;
-    margin: 65px auto;
+    width: 550px;
+    margin: 30px auto;
     padding: 20px;
     padding-left: 10px;
     background-color: #f8f9fa;
@@ -209,9 +209,15 @@ button{
     font-weight: bold;
   }
   
-  input.form-control,
-  select.form-control {
+  input.form-control{
     width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  select.form-control {
+    width: 103%;
     padding: 8px;
     margin-top: 5px;
     border: 1px solid #ccc;
@@ -219,7 +225,7 @@ button{
   }
   
   button.btn.btn-primary {
-    width: 100%;
+    width: 102%;
     padding: 10px;
     background-color: #007bff;
     color: white;
@@ -227,7 +233,7 @@ button{
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
-    margin-left: 1px;
+    margin-left: 5px;
   }
   
   button.btn.btn-primary:hover {
